Added product page.

--- a/app/public/assets/css/main.css
+++ b/app/public/assets/css/main.css
@@ -37,7 +37,7 @@ body {
     
     /* background-color: #fff; */
 
-    margin: 0 auto 20px auto;
+    margin: 0 auto 0 auto;
     padding: 20px !important;
     /* padding-left: 276px !important; */
 
