--- a/app/public/assets/css/main.css
+++ b/app/public/assets/css/main.css
@@ -13,7 +13,7 @@
 
     /* ~ Dark Theme Colors */
     --c-dark-bg: #14161A;
-    --c-dark-header: rgba(33,37,43,.95);
+    --c-dark-header: rgba(33,37,43,.9);
     --c-dark-drawer: rgba(27,31,36,.95);
     --c-dark-card: #272B33;
     --c-dark-footer: rgba(40,44,52,.95);
@@ -62,6 +62,12 @@ body {
 
 .v-card.theme--light {
     background-color: var(--c-light-card) !important;
+}
+
+.v-app-bar {
+    /* backdrop blur is unsupported in firefox, sadly :( */
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
 }
 
 .v-app-bar.theme--dark {
