Added "to top" button, reworked a little on product page, added "cart" page

--- a/app/public/assets/css/main.css
+++ b/app/public/assets/css/main.css
@@ -23,6 +23,10 @@ body {
     background-color: #222;
 }
 
+html, body{
+    scroll-behavior: smooth;
+}
+
 .theme--light.v-application {
     background-color: var(--c-light-bg) !important;
 }
